--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    
+    <!--Create a bootstrap navbar -->
     <nav class="navbar navbar-default navbar-static-top" role="navigation">
       <div class='container'>
         <div class="navbar-header">
@@ -19,10 +19,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <!--Set anything with path / -->
           <a href="/" class="navbar-brand">DevMatch</a>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
+            <!--Set anything with /about -->
             <li><a href="/about">About</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
