--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <nav class="navbar navbar-default navbar-static-top" role="navigation">
       <div class='container'>
         <div class="navbar-header">
+          
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -20,12 +21,17 @@
             <span class="icon-bar"></span>
           </button>
           <!--Set anything with path / -->
-          <a href="/" class="navbar-brand"><i class="fa fa-group"></i> DevMatch</a>
+          
+          <%= link_to "/", class: "navbar-brand" do %>
+            <i class="fa fa-group"></i>
+             DevMatch
+             <% end %>
+             
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
             <!--Set anything with /about -->
-            <li><a href="/about">About</a></li>
+            <li><%= link_to "About", "/about" %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
