--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,1 +1,20 @@
-<h1>Contact Form</h1>
+<div class="container">
+  <!-- Create rails form -->
+  <h3 class="text-center">Contact Us</h3>
+      
+      <%= form_for "/contacts" do |f| %>
+      <!-- Create each form box -->
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+        
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+        
+        <%= f.label :comments %>
+        <%= f.text_area :comments %>
+        
+        <%= f.submit 'Submit' %>
+    
+  <% end %>
+  
+</div>
