--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <h3 class="text-center">Contact Us</h3>
-    <!-- Bootstrap column control -->
+    <!-- Bootstrap column control 4 empty columns to the left -->
     <div class="col-md-4 col-md-offset-4">
       <!-- Create grey box for form -->
       <div class="well">
