--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,13 +29,20 @@
              
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
+          
+          <!-- Create buttons for login/sign up -->
+          <div class= "nav navbar-nav navbar-right">
+            <a href="/users/sign_in" class="btn btn-default navbar-btn">Log In</a>
+             <a href="/users/sign_up" class="btn btn-default navbar-btn">Sign Up</a>
+          </div>
+          
           <ul class="nav navbar-nav navbar-right">
-            <!--Set anything with /about to this path -->
+            <!--Set paths -->
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact Us", new_contact_path %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
-      </div>
+      </div>  
     </nav>
     
     <div class= "container">
