--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,9 @@
           
           <!-- Create buttons for login/sign up -->
           <div class= "nav navbar-nav navbar-right">
-            <a href="/users/sign_in" class="btn btn-default navbar-btn">Log In</a>
-             <a href="/users/sign_up" class="btn btn-default navbar-btn">Sign Up</a>
+            <!-- Create buttons with correct paths for user session/reg -->
+             <%= link_to "Log In", new_user_session_path, class: "btn btn-default navbar-btn" %>
+             <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default navbar-btn" %>
           </div>
           
           <ul class="nav navbar-nav navbar-right">
