--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,9 @@
             <!-- If the user is signed in, show button to log out -->
               <% if user_signed_in? %>
                 <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn" %>
-              <!-- Otherwise show buttons for log in/Sign up -->
+              <!-- Otherwise show buttons for log in -->
               <% else %>
                 <%= link_to "Log In", new_user_session_path, class: "btn btn-default navbar-btn" %>
-                <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default navbar-btn" %>
               <% end %>
           </div>
           
