--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
       
+        <!-- If statement printing out whichever plan user chooses -->
         <div class="text-center">
           <% if params[:plan] == '2' %>
             <h1>Pro Account</h1>
@@ -13,7 +14,7 @@
         </div>
         
         <div class="well">
-          <!-- If user wants basic, use plan 1, else use plan 2 -->
+          <!-- If user wants pro, use plan 2, else use plan 1 -->
           <% if params[:plan] == '2' %>
             <%= render "pro_form" %>
           <% else %>
