Added plan id as hidden fields to signup forms

--- a/app/views/devise/registrations/_basic_form.html.erb
+++ b/app/views/devise/registrations/_basic_form.html.erb
@@ -1,6 +1,9 @@
 <!-- Creating the basic form through Devise gem -->
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
+    
+  <!-- Inject hidden field into form, grabbing whichever plan from url and setting it to that value -->
+  <%= hidden_field_tag 'plan', params[:plan] %>
 
   <div class="field form-group">
       <%= f.label :email %>
