--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,5 +1,5 @@
 <!-- Creating the pro form through Devise gem -->
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: 'pro_form'}) do |f| %>
   <%= devise_error_messages! %>
   
   <!-- Inject hidden field into form, grabbing whichever plan from url and setting it to that value -->
@@ -41,7 +41,7 @@
   </div>
   
   <div class="actions form-group">
-    <%= f.submit "Sign up", class: 'btn btn-success' %>
+    <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-signup-btn' %>
   </div>
   
 <% end %>
