Cleaned up alerts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
       </div>  
     </nav>
     
-    <div class= "container flash-container">
+    <div class= "container flash-continer">
      <!-- Create notification -->
       <!-- Loops through flash hash,
       type = key danger or success
