--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,15 +6,17 @@
     <!-- Sign up links -->
     <div class="container home-signup-links">
       <div class="row">
-        <!-- Link to create a profile, pointing to current user -->
+        <!-- If statement showing site if user signed in -->
         <% if user_signed_in? %>
           <div class="col-md-6">
             <div class="well">
               <h2 class="text-center">Your Profile</h2>
+                <!-- if user has made a profile show this -->
                 <% if current_user.profile %>
-                <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
+                <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
                 <%= link_to "View your profile", user_path(current_user.id), class: 'btn btn-default btn-lg btn-block' %>
               <% else %>
+                 <!-- if user has not created profile give them an option -->
                   <p>Create your profile so that you can share your information with the community!</p>
                  <%= link_to "Create your profile", new_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
               <% end %>
