--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,21 +1,26 @@
-.avatar-show-img{
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
+.avatar-show-img {
   width: 128px;
   height: 128px;
 }
 
-.well.profile-block{
+.well.profile-block {
   color: white;
   h3{
     margin-top: 0;
   }
 }
 
-.well.profile-description{
+.well.profile-description {
   background-color: #5cb85c;
   border-color: #4cae4c;
 }
 
-.well.profile-contact-info{
+.well.profile-contact-info {
   background-color: #5bc0de;
   border-color:#46b8da;
 }
