--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
              <div class="well profile-block profile-contact-info">
                <h3>Contact Information</h3>
                 <%= @user.profile.phone_number %><br/>
-                <%= @User.profile.contact_email %><br/>
+                <%= @user.profile.contact_email %><br/>
             </div>
          <% end %>
     </div>
